--- a/Frontend/src/app/pages/teacher/teacher.component.html
+++ b/Frontend/src/app/pages/teacher/teacher.component.html
@@ -24,7 +24,7 @@
                     |
                     <a href="#chart-3" class="feature">See course material</a>
                     |
-                    <a href="#chart-4" class="feature">Schedule</a>
+                    <a href="#chart-4" class="feature" (click)="getSchedule()">Schedule</a>
                     |
                     <a href="#chart-5" class="feature">Calendar</a>
                 </b></p>
@@ -99,6 +99,51 @@
         </section>
         <section class="chart" id="chart-4">
             <h3>Schedule</h3>
+            <table class="student-table">
+                <thead>
+                    <tr>
+                        <th>Course Name</th>
+                        <th>Semester</th>
+                        <th>Teacher</th>
+                        <th>Day</th>
+                        <th>Start Time</th>
+                        <th>End Time</th>
+                        <th>Room</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @for (item of schedule; track item.courseId; let i = $index) {
+                    <tr>
+                        <td rowspan="3">{{item.Assignment.name}}</td>
+                        <td rowspan="3">{{item.Assignment.semester}}</td>
+                        <td rowspan="3">{{item.Teacher.Person.firstName + " " + item.Teacher.Person.lastName1 + " " +
+                            item.Teacher.Person.lastName2}}</td>
+                        <td>{{item.CourseSchedules[0].day}}</td>
+                        <td>{{item.CourseSchedules[0].startTime}}</td>
+                        <td>{{item.CourseSchedules[0].endTime}}</td>
+                        <td>{{item.CourseSchedules[0].room}}</td>
+                    </tr>
+                    @if (item.CourseSchedules[1]) {
+                    <tr>
+                        <td>{{item.CourseSchedules[1].day}}</td>
+                        <td>{{item.CourseSchedules[1].startTime}}</td>
+                        <td>{{item.CourseSchedules[1].endTime}}</td>
+                        <td>{{item.CourseSchedules[1].room}}</td>
+                    </tr>
+                    }
+                    @if (item.CourseSchedules[2]) {
+                    <tr>
+                        <td>{{item.CourseSchedules[2].day}}</td>
+                        <td>{{item.CourseSchedules[2].startTime}}</td>
+                        <td>{{item.CourseSchedules[2].endTime}}</td>
+                        <td>{{item.CourseSchedules[2].room}}</td>
+                    </tr>
+                    }
+
+                    }
+                </tbody>
+            </table>
+
             <div class="div-chart">
 
             </div>
