feat (frontend and backend ) fix bugs
fixed bugs and added rederization

--- a/Frontend/src/app/pages/admin/admin.component.html
+++ b/Frontend/src/app/pages/admin/admin.component.html
@@ -185,6 +185,8 @@
         </section>
         <section class="chart" id="chart-5">
             <h3>Close Semester</h3>
+            <button type="button" class="staff-button" id="user-consult"
+                (click)="setAllEnrollsInactive()">Close</button>
 
         </section>
     </main>
