--- a/Frontend/src/app/pages/admin/admin.component.html
+++ b/Frontend/src/app/pages/admin/admin.component.html
@@ -77,16 +77,60 @@
                 </form>
             </div>
             }@else if (option === '2') {
-            <form action="" class="manage-form" id="userForm" [formGroup]="assignmentForm2">
-                <label for="user-id">Course ID</label>
-                <input type="text" name="Course-id" id="assignment-id" formControlName="asId">
+            <form action="" class="manage-form" id="userForm" [formGroup]="courseScheduleForm2">
+                <label for="user-id">Name Course</label>
+                <input type="text" name="Course-id" id="assignment-id" formControlName="courseId">
                 <button type="button" class="staff-button" id="user-submit"
                     (click)="consultCourseSchedule()">Submit</button>
 
                 <button type="button" class="staff-button" id="user-consult" (click)="option = '0'">cancel</button>
             </form>
             }@else if (option === '3') {
+            <table class="student-table">
+                <thead>
+                    <tr>
+                        <th>Course Name</th>
+                        <th>Semester</th>
+                        <th>Teacher</th>
+                        <th>Day</th>
+                        <th>Start Time</th>
+                        <th>End Time</th>
+                        <th>Room</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @for (item of filteredCoureSchedules; track item.courseId; let i = $index) {
+                    <tr>
+                        <td rowspan="3">{{item.Assignment.name}}</td>
+                        <td rowspan="3">{{item.Assignment.semester}}</td>
+                        <td rowspan="3">{{item.Teacher.Person.firstName + " " + item.Teacher.Person.lastName1 + " " +
+                            item.Teacher.Person.lastName2}}</td>
+                        <td>{{item.CourseSchedules[0].day}}</td>
+                        <td>{{item.CourseSchedules[0].startTime}}</td>
+                        <td>{{item.CourseSchedules[0].endTime}}</td>
+                        <td>{{item.CourseSchedules[0].room}}</td>
+                    </tr>
+                    @if (item.CourseSchedules[1]) {
+                    <tr>
+                        <td>{{item.CourseSchedules[1].day}}</td>
+                        <td>{{item.CourseSchedules[1].startTime}}</td>
+                        <td>{{item.CourseSchedules[1].endTime}}</td>
+                        <td>{{item.CourseSchedules[1].room}}</td>
+                    </tr>
+                    }
+                    @if (item.CourseSchedules[2]) {
+                    <tr>
+                        <td>{{item.CourseSchedules[2].day}}</td>
+                        <td>{{item.CourseSchedules[2].startTime}}</td>
+                        <td>{{item.CourseSchedules[2].endTime}}</td>
+                        <td>{{item.CourseSchedules[2].room}}</td>
+                    </tr>
+                    }
 
+                    }
+                </tbody>
+            </table>
+            <button type="button" class="staff-button" id="user-consult" (click)="option = '0'">cancel</button>
             }
 
         </section>
