--- a/Frontend/src/app/pages/teacher/teacher.component.html
+++ b/Frontend/src/app/pages/teacher/teacher.component.html
@@ -171,7 +171,7 @@
 
                 <h3>Add Pending</h3>
                 <form id="pendingForm">
-                    <input type="date" id="pendingDate" required>
+                    <input type="date" id="pendingDate" required title=".">
                     <input type="text" id="pendingText" placeholder="Enter your pending..." required>
                     <button type="submit">Add</button>
                 </form>
@@ -190,11 +190,11 @@
             <p>(604) 444 76 54</p>
             <p>Whatsapp: (57) 3008848512</p>
         </div>
-        <div>
+        <div class="about">
             <h3>About Us</h3>
             <a href="../../views/home/home.html">Home</a>
-            <p>Mission</p>
-            <p>Vision</p>
+            <a href="../../views/home/home.html#mission">Mission</a>
+            <a href="../../views/home/home.html#vision">Vision</a>
         </div>
         <div class="social">
             <h3>Our Social Networks</h3>
