--- a/Frontend/src/app/pages/student/student.component.html
+++ b/Frontend/src/app/pages/student/student.component.html
@@ -25,7 +25,7 @@
                     |
                     <a href="#chart-3" class="feature">Schedule</a>
                     |
-                    <a href="#chart-4" class="feature">Enrollment</a>
+                    <a href="#chart-4" class="feature" (click)="getCourses()">Enrollment</a>
                 </b></p>
         </section>
     </nav>
@@ -153,20 +153,113 @@
             </div>
         </section>
         <section class="chart" id="chart-4">
+            @if (option !== '1') {
             <h3>Enrollment</h3>
+            <table class="student-table">
+                <thead>
+                    <tr>
+                        <th>Course Name</th>
+                        <th>Semester</th>
+                        <th>Teacher</th>
+                        <th>Day</th>
+                        <th>Start Time</th>
+                        <th>End Time</th>
+                        <th>Room</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @for (item of courses; track item.courseId; let i = $index) {
+                    <tr>
+                        <td [rowSpan]="item.CourseSchedules.length">{{item.Assignment.name}}</td>
+                        <td [rowSpan]="item.CourseSchedules.length">{{item.Assignment.semester}}</td>
+                        <td [rowSpan]="item.CourseSchedules.length">{{item.Teacher.Person.firstName + " " +
+                            item.Teacher.Person.lastName1 + " " +
+                            item.Teacher.Person.lastName2}}</td>
+                        <td>{{item.CourseSchedules[0].day}}</td>
+                        <td>{{item.CourseSchedules[0].startTime}}</td>
+                        <td>{{item.CourseSchedules[0].endTime}}</td>
+                        <td>{{item.CourseSchedules[0].room}}</td>
+                        <td [rowSpan]="item.CourseSchedules.length">
+                            <button type="button" class="student-button" (click)="addCourse(item.courseId)">add
+                                course</button>
+                        </td>
 
-            <div class="div-chart">
-                <form action="" class="manage-form">
-                    <label for="course-id">Course ID</label>
-                    <input type="number" name="course-id" id="course-id" required>
+                    </tr>
+                    @if (item.CourseSchedules[1]) {
+                    <tr>
+                        <td>{{item.CourseSchedules[1].day}}</td>
+                        <td>{{item.CourseSchedules[1].startTime}}</td>
+                        <td>{{item.CourseSchedules[1].endTime}}</td>
+                        <td>{{item.CourseSchedules[1].room}}</td>
+                    </tr>
+                    }
+                    @if (item.CourseSchedules[2]) {
+                    <tr>
+                        <td>{{item.CourseSchedules[2].day}}</td>
+                        <td>{{item.CourseSchedules[2].startTime}}</td>
+                        <td>{{item.CourseSchedules[2].endTime}}</td>
+                        <td>{{item.CourseSchedules[2].room}}</td>
+                    </tr>
+                    }
 
-                    <label for="teacher-id">Teacher ID</label>
-                    <input type="number" name="teacher-id" id="teacher-id" required>
+                    }
+                </tbody>
+            </table>
+            <button type="button" class="student-button" (click)="summary()">Summary</button>
+            }
+            @if (option === '1') {
+            <h3>Enrollment Summary</h3>
+            <table class="student-table">
+                <thead>
+                    <tr>
+                        <th>Course Name</th>
+                        <th>Semester</th>
+                        <th>Teacher</th>
+                        <th>Day</th>
+                        <th>Start Time</th>
+                        <th>End Time</th>
+                        <th>Room</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @for (item of selectedCourses; track item.courseId; let i = $index) {
+                    <tr>
+                        <td [rowSpan]="item.CourseSchedules.length">{{item.Assignment.name}}</td>
+                        <td [rowSpan]="item.CourseSchedules.length">{{item.Assignment.semester}}</td>
+                        <td [rowSpan]="item.CourseSchedules.length">{{item.Teacher.Person.firstName + " " +
+                            item.Teacher.Person.lastName1 + " " +
+                            item.Teacher.Person.lastName2}}</td>
+                        <td>{{item.CourseSchedules[0].day}}</td>
+                        <td>{{item.CourseSchedules[0].startTime}}</td>
+                        <td>{{item.CourseSchedules[0].endTime}}</td>
+                        <td>{{item.CourseSchedules[0].room}}</td>
 
-                    <button onclick="alert('The registration has been created successfully')" type="submit"
-                        class="student-button">Submit</button>
-                </form>
-            </div>
+                    </tr>
+                    @if (item.CourseSchedules[1]) {
+                    <tr>
+                        <td>{{item.CourseSchedules[1].day}}</td>
+                        <td>{{item.CourseSchedules[1].startTime}}</td>
+                        <td>{{item.CourseSchedules[1].endTime}}</td>
+                        <td>{{item.CourseSchedules[1].room}}</td>
+                    </tr>
+                    }
+                    @if (item.CourseSchedules[2]) {
+                    <tr>
+                        <td>{{item.CourseSchedules[2].day}}</td>
+                        <td>{{item.CourseSchedules[2].startTime}}</td>
+                        <td>{{item.CourseSchedules[2].endTime}}</td>
+                        <td>{{item.CourseSchedules[2].room}}</td>
+                    </tr>
+                    }
+
+                    }
+                </tbody>
+            </table>
+
+            <button type="button" class="student-button" (click)="saveEnroll()">Enroll</button>
+            <button type="button" class="student-button" (click)="option='0'">Return</button>
+            }
         </section>
     </main>
 
