feat (frontend and backend ) add renderizatio and fix bugs
fixed bugs and added rederization of staff

--- a/Frontend/src/app/pages/staff/staff.component.css
+++ b/Frontend/src/app/pages/staff/staff.component.css
@@ -54,4 +54,23 @@
 .table thead {
     background-color: #003366;
     color: white;
+} 
+
+.student-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    font-size: 1rem;
+    text-align: center;
+}
+
+.student-table th,
+.student-table td {
+    padding: 12px;
+    border: 1px solid #040101;
+}
+
+.student-table th {
+    background-color: #003366FF;
+    color: #ddd;
 }
