--- a/Frontend/src/app/pages/admin/admin.component.html
+++ b/Frontend/src/app/pages/admin/admin.component.html
@@ -96,43 +96,47 @@
                         <th>Start Time</th>
                         <th>End Time</th>
                         <th>Room</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     @for (item of filteredCoureSchedules; track item.courseId; let i = $index) {
                     <tr>
-                        <td rowspan="3">{{item.Assignment.name}}</td>
-                        <td rowspan="3">{{item.Assignment.semester}}</td>
-                        <td rowspan="3">{{item.Teacher.Person.firstName + " " + item.Teacher.Person.lastName1 + " " +
-                            item.Teacher.Person.lastName2}}</td>
-                        <td>{{item.CourseSchedules[0].day}}</td>
-                        <td>{{item.CourseSchedules[0].startTime}}</td>
-                        <td>{{item.CourseSchedules[0].endTime}}</td>
-                        <td>{{item.CourseSchedules[0].room}}</td>
+                        <td [rowSpan]="item.CourseSchedules.length">{{ item.Assignment.name }}</td>
+                        <td [rowSpan]="item.CourseSchedules.length">{{ item.Assignment.semester }}</td>
+                        <td [rowSpan]="item.CourseSchedules.length">{{ item.Teacher.Person.firstName + " " +
+                            item.Teacher.Person.lastName1 + " " + item.Teacher.Person.lastName2 }}</td>
+
+                        <td>{{ item.CourseSchedules[0].day }}</td>
+                        <td>{{ item.CourseSchedules[0].startTime }}</td>
+                        <td>{{ item.CourseSchedules[0].endTime }}</td>
+                        <td>{{ item.CourseSchedules[0].room }}</td>
+                        <td [rowSpan]="item.CourseSchedules.length">
+                            <button type="button" class="staff-button"
+                                (click)="deleteCourseSchedule(item.courseId)">Delete</button>
+                        </td>
                     </tr>
                     @if (item.CourseSchedules[1]) {
                     <tr>
-                        <td>{{item.CourseSchedules[1].day}}</td>
-                        <td>{{item.CourseSchedules[1].startTime}}</td>
-                        <td>{{item.CourseSchedules[1].endTime}}</td>
-                        <td>{{item.CourseSchedules[1].room}}</td>
+                        <td>{{ item.CourseSchedules[1].day }}</td>
+                        <td>{{ item.CourseSchedules[1].startTime }}</td>
+                        <td>{{ item.CourseSchedules[1].endTime }}</td>
+                        <td>{{ item.CourseSchedules[1].room }}</td>
                     </tr>
                     }
                     @if (item.CourseSchedules[2]) {
                     <tr>
-                        <td>{{item.CourseSchedules[2].day}}</td>
-                        <td>{{item.CourseSchedules[2].startTime}}</td>
-                        <td>{{item.CourseSchedules[2].endTime}}</td>
-                        <td>{{item.CourseSchedules[2].room}}</td>
+                        <td>{{ item.CourseSchedules[2].day }}</td>
+                        <td>{{ item.CourseSchedules[2].startTime }}</td>
+                        <td>{{ item.CourseSchedules[2].endTime }}</td>
+                        <td>{{ item.CourseSchedules[2].room }}</td>
                     </tr>
                     }
-
                     }
                 </tbody>
             </table>
             <button type="button" class="staff-button" id="user-consult" (click)="option = '0'">cancel</button>
             }
-
         </section>
 
         <section class="chart" id="chart-3">
